[gd_scene load_steps=21 format=3 uid="uid://d2l0t1tx054pt"]

[ext_resource type="Script" path="res://assets/scripts/playerScripts/playerController.gd" id="1_layom"]
[ext_resource type="PackedScene" uid="uid://dtc0utembojjr" path="res://assets/scenes/playerStuff/after_image.tscn" id="2_r0jco"]
[ext_resource type="Texture2D" uid="uid://byfcglw7cdtx2" path="res://assets/sprites/playerSprites/banan.png" id="3_qstss"]
[ext_resource type="PackedScene" uid="uid://ctcrgjuc2gwmc" path="res://assets/scenes/playerStuff/gun.tscn" id="4_x0kyn"]
[ext_resource type="PackedScene" uid="uid://8nw6luhhkyku" path="res://assets/scenes/areaFunctions/hurtbox.tscn" id="5_fkiva"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dla2a"]
atlas = ExtResource("3_qstss")
region = Rect2(373, 143, 62, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_invfy"]
atlas = ExtResource("3_qstss")
region = Rect2(31, 10, 93, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5k3k"]
atlas = ExtResource("3_qstss")
region = Rect2(105, 10, 98, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqp5d"]
atlas = ExtResource("3_qstss")
region = Rect2(293, 10, 69, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_18sn0"]
atlas = ExtResource("3_qstss")
region = Rect2(384, 10, 58, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2ren"]
atlas = ExtResource("3_qstss")
region = Rect2(219, 143, 56, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_ladg0"]
atlas = ExtResource("3_qstss")
region = Rect2(29, 286, 94, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o82v"]
atlas = ExtResource("3_qstss")
region = Rect2(102, 286, 99, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_111hc"]
atlas = ExtResource("3_qstss")
region = Rect2(193, 286, 76, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0hyq"]
atlas = ExtResource("3_qstss")
region = Rect2(269, 286, 76, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpphn"]
atlas = ExtResource("3_qstss")
region = Rect2(345, 286, 76, 107)

[sub_resource type="SpriteFrames" id="SpriteFrames_mwu2u"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dla2a")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_invfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5k3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqp5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18sn0")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2ren")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ladg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o82v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_111hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0hyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpphn")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qo5t3"]
radius = 4.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r3n6l"]
radius = 4.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nmuqf"]
radius = 8.06226

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_mask = 770
script = ExtResource("1_layom")
afterImageNode = ExtResource("2_r0jco")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.29676, 0.79437)
zoom = Vector2(3.3, 3.3)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="playerAnimator" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="playerAnimator"]
position = Vector2(0, -8)
scale = Vector2(-0.129, 0.131)
sprite_frames = SubResource("SpriteFrames_mwu2u")
animation = &"jump"
autoplay = "idle"
frame_progress = 0.145424

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_qo5t3")

[node name="gunPosition" type="Node2D" parent="."]

[node name="gun" parent="gunPosition" instance=ExtResource("4_x0kyn")]
position = Vector2(4, -4)

[node name="hurtbox" parent="." instance=ExtResource("5_fkiva")]
visible = false
collision_mask = 20

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_r3n6l")

[node name="afterImageTimer" type="Timer" parent="."]
wait_time = 0.04

[node name="afterImageSpawner" type="Node2D" parent="."]
position = Vector2(0, -7)

[node name="contactDamage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="contactDamage"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_nmuqf")

[node name="fireDelay" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="afterImageTimer" to="." method="_on_after_image_timer_timeout"]
[connection signal="body_entered" from="contactDamage" to="." method="_on_contact_damage_body_entered"]
[connection signal="timeout" from="fireDelay" to="gunPosition/gun" method="_on_fire_delay_timeout"]

[editable path="hurtbox"]
